public/css/main.css
/* ... */
.filter ul > li:last-of-type {
    margin-bottom: .5em;
}

.filter fieldset > h5 {
    cursor: pointer;
}
.filter input[type="checkbox"] {
	float: left;
	margin: 1em .5em 0 0;
}

.date-divider {
    background-color: #e5e5cd;
    border-bottom: 0px solid #cac9ad;
    border-top: 0px solid #cac9ad;
    padding: .25em 3%;
}
.date-divider span {
    float: right;
}

a.comment-box {
    border: 1px solid #ccc;
    border-radius: 2px;
    color: #333;
    display: block;
    font-family: Arial, sans-serif;
    font-size: 1.1em;
    font-weight: bold;
    margin: .5em 0;
    padding:  .75em .75em .55em;
}
a.comment-box:hover {
    background: #f9f9f9;
}

.notices-box {
	margin-bottom: 1em;
    text-align: center;
}
.notices-box > h2 {
    text-align: left;
}
.date-divider {
    background-color: #e5e5cd;
    border-bottom: 0px solid #cac9ad;
    border-top: 0px solid #cac9ad;
    font-family: Georgia, Times, serif;
    font-weight: bold;
    margin-bottom: 1em;
    padding: .5em 3%;
}

.revenue-opportunity {
	background-color: #e8e9f3;
	height: 100px;
	margin: 0 auto;
	padding-top: 50px;
	text-align: center;
}

input[type="checkbox"] {
    margin-right: .5em;
}
label.check {
    font-family: Arial, sans-serif;
    font-size: 0.9em;
}
.field {
/*     padding: .5em 0; */
}

.field.document, .field.document + a {
    display: inline-block;
    margin-top: .5em;
}

.field.account-profile {
    margin-bottom: 1em;
}

.field .redactor-box {
    margin-bottom: 0;
}

.image-field-wrapper {
	display: inline-block;
}
img.display-image {
	float: left;
	margin: 0 15px 15px 0;
}
.event .field.date, .field.statezip {
    display: inline-block;
    width: 48%;
    padding-right: .5em;
}
a.optional-category-field {
    float:right;
}
.legal {
    font-family: Arial, sans-serif;
    font-size: .9em;
}
.inputs label,
.field label {
	display: block;
    font-weight: bold;
}
.buttons {
    text-align: center;
}
.sidebar {
    margin: 0 2em;
}

.event-venue {
    font-family: Arial, sans-serif;
    font-weight: bold;
    color: #A52A2A;
}

.notices .event {
    font-family: Arial, sans-serif;
    margin-top: 0;
    margin-bottom: 0;
}

.notices .byline {
    margin-top: 1em;
}

.notices .byline, .notices .posts .byline {
    margin-bottom: 1em;
}



/* * * * * * * * * * * * * * * * * * * * *
        FORM STYLES
* * * * * * * * * * * * * * * * * * * * * */
form input, form select {
    margin-bottom: .5em;
}
#search fieldset {
    margin: 1em 0 .5em;
}

#search label {
    font-weight: normal;
}

#search label:hover {
    font-weight: bold;
    text-decoration: underline;
}


form input[type="text"], form input[type="password"],
form select, textarea {
    display: block;
    padding: .25em;
    width: 98%;
}
form input[type="text"]::-webkit-input-placeholder {
    color: #000;
    font-size: .9em;
    line-height: 1.5em;
}
form input[type="text"]:-moz-placeholder { /* Firefox 18- */
    color: #000;
    font-size: .8em;
    line-height: 1.5em;
}

form input[type="text"]::-moz-placeholder {  /* Firefox 19+ */
    color: #000;
/*     font-size: .8em; */
/*     line-height: 1.5em; */
}

:-ms-input-placeholder {  
    color: #000;
    line-height: 1em;
}

.event .field.date input {
    background: url('../img/calendar-icon.png') .25em 45% no-repeat;
    background-color: #fff;
    padding-left: 2em;
    width: 88%;
}

form input[type="datetime"], form input[type="tel"] {
    padding: .25em;

}
form textarea {
    max-width: 100%;
}
form > label, fieldset > label {
    font-weight: bold;
}
form > label[for="rememberMe"],
form > label[for="termsOfUse"] {
    font-weight: normal;
}
form > button {
/*
    background: #CAC8AD;
    border: none;
    border-radius: 2px;
    color: #fff;
*/
    margin: 1em 0 0;
    padding: .5em;
}

input[type="checkbox"], input[type="radio"] {
    margin: 0 .25em;
}

.account main input[type="checkbox"], .account main input[type="radio"] {
    margin: 0 .25em 0 0;
}

fieldset.image, fieldset.document, .add-topic, .add-location {
    display: none;
}

.first-option {
	color: #666;	
}

.file-type {
	margin: 0;
}

h2 span.preview {
  line-height: inherit;
}
h2 span.preview button.close {
    color: blue;
}

/* * * * * * * * * * * * * * * * * * * * *
        SUPPORT
* * * * * * * * * * * * * * * * * * * * * */
#support {
	text-align: center;
}

#support h4, #subscribe h4, #subscribe p {
    display: none;
}

#donate, #subscribe {
    min-width: 45%;
}

#donate {
    float: left;
}

#subscribe {
    float: right;
    padding-bottom: 1em;
}

#subscribe p {
    font-family: Arial, sans-serif;
    margin: 0;
}

button.donate, a.subscribe {
    background: #ff9669;
    border: none;
    border-radius: 25px;
    color: #000;
    font-family: Arial, sans-serif;
    font-size: .85em;
    font-weight: bold;
    margin: 0 auto;
    padding: 5px 30px 3px;
    text-transform: uppercase;
}

button.donate {
    background: #ff9669;
}

a.subscribe {
    background: #00BFB0;
    margin-bottom: 8em;
}

#share {
	display: inline-block;
	margin: 0 auto .75em auto;
	text-align: center;
    width: 70%;
}

#share ul {
	list-style: none;
	margin: 0 auto;
	padding: 0 10%;
	text-align: right;
}

#share li {
	display: inline-block;
	margin-right: 3%;
	width: 12%;
}

#share li:last-of-type {
	margin-right: 0;
}

footer {
    border-top: 1px solid #c9c8ac;
    clear: both;
    padding: 1em;
    width: inherit;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}
/* ... */

